Add link to arion.one

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         <p> We envision a world in which investing in digital  collectibles have a real 
             and tangible impact on your experience. Stay tuned!</p>
 
+        <p><a href="https://arion.one/">Sign up for waiting list</a></p>
+
         <ul>
 
             <li><a href="page3.html">About Us</a> </li>    
